# UniMacro

./: CMakeLists.txt  KeyMapping.cfg  LICENSE  UniMacro.ini  main.cpp
CFG/: Cyberpunk 2077.ini  KeyMapping.cfg  dh1.ini  hl.ini  last_config.txt  remnant.ini
